--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
             margin: 0 4px;
             line-height: normal;
             transition: all 0.3s ease;
+            cursor: default;
+            user-select: none;
         }
 
         .stable-badge.usdc {
@@ -241,36 +243,114 @@
             background: rgba(168, 85, 247, 0.25);
             border-color: rgba(168, 85, 247, 0.7);
             transform: translateY(-1px);
-            box-shadow: 0 0 15px rgba(168, 85, 247, 0.2);
+            box-shadow: 0 0 15px rgba(168, 85, 247, 0.3);
         }
 
-        .fade-label {
-            font-size: 8px;
-            font-weight: 800;
-            letter-spacing: 0.1em;
-            text-transform: uppercase;
-            display: flex;
-            align-items: center;
-            gap: 2px;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            white-space: nowrap;
-            opacity: 0.7;
-            transition: all 0.3s ease;
+        .stable-badge.defi {
+            background: rgba(37, 99, 235, 0.15);
+            border: 1px solid rgba(37, 99, 235, 0.4);
+            color: #60a5fa;
+            padding: 4px 12px;
         }
 
-        .group:hover .fade-label {
-            opacity: 1;
+        .stable-badge.defi:hover {
+            background: rgba(37, 99, 235, 0.25);
+            border-color: rgba(37, 99, 235, 0.7);
+            transform: translateY(-1px);
+            box-shadow: 0 0 15px rgba(37, 99, 235, 0.3);
+        }
+
+        .stable-badge.rwa {
+            background: rgba(20, 184, 166, 0.15);
+            border: 1px solid rgba(20, 184, 166, 0.4);
+            color: #2dd4bf;
+            padding: 4px 12px;
+        }
+
+        .stable-badge.rwa:hover {
+            background: rgba(20, 184, 166, 0.25);
+            border-color: rgba(20, 184, 166, 0.7);
+            transform: translateY(-1px);
+            box-shadow: 0 0 15px rgba(20, 184, 166, 0.3);
         }
 
         .chain-badge {
             transition: all 0.3s ease;
+            cursor: default;
+            user-select: none;
         }
 
         .chain-badge:hover {
             transform: translateY(-1px);
             background: rgba(255, 255, 255, 0.05);
+        }
+
+        /* Badge Flipping Animation */
+        .badge-flipper {
+            position: relative;
+            display: inline-flex;
+            vertical-align: middle;
+            height: 36px;
+            width: 100px;
+            /* Fixed width to prevent text shifting */
+            margin: 0 4px;
+            perspective: 1000px;
+        }
+
+        .flipper-item {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: max-content;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            backface-visibility: hidden;
+            transform-style: preserve-3d;
+            pointer-events: none;
+        }
+
+        @keyframes flip-cycle {
+
+            0%,
+            28% {
+                opacity: 1;
+                transform: translate(-50%, -50%) rotateX(0deg);
+                pointer-events: auto;
+                z-index: 10;
+            }
+
+            33%,
+            95% {
+                opacity: 0;
+                transform: translate(-50%, -50%) rotateX(90deg);
+                pointer-events: none;
+                z-index: 0;
+            }
+
+            100% {
+                opacity: 1;
+                transform: translate(-50%, -50%) rotateX(0deg);
+                pointer-events: auto;
+                z-index: 10;
+            }
+        }
+
+        .flipper-item:nth-child(1) {
+            animation: flip-cycle 9s infinite;
+        }
+
+        .flipper-item:nth-child(2) {
+            animation: flip-cycle 9s infinite;
+            animation-delay: 3s;
+        }
+
+        .flipper-item:nth-child(3) {
+            animation: flip-cycle 9s infinite;
+            animation-delay: 6s;
+        }
+
+        .badge-flipper:hover .flipper-item {
+            animation-play-state: paused !important;
         }
     </style>
 </head>
@@ -283,43 +363,54 @@
     <div class="fixed bottom-20 right-10 w-64 h-64 bg-secondary/5 rounded-full blur-[100px] animate-pulse-slow"
         style="animation-delay: 2s;"></div>
 
-    <!-- main-container with reduced top padding -->
-    <main class="main-container w-full flex flex-col items-center text-center py-4">
+    <!-- main-container with minimal top padding -->
+    <main class="main-container w-full flex flex-col items-center text-center py-2">
 
-        <!-- Logo Section -->
-        <div class="relative mb-6 animate-float">
+        <!-- Logo Section with reduced margin -->
+        <div class="relative mb-3 animate-float">
             <div class="absolute inset-0 bg-primary/30 rounded-full blur-3xl animate-pulse-glow"></div>
             <img src="logo.png" alt="Booster Monster"
                 class="w-24 h-24 md:w-32 md:h-32 object-contain relative z-10 logo-glow">
         </div>
 
         <!-- Typography Section -->
-        <div class="space-y-6 max-w-4xl mx-auto mb-6">
+        <div class="space-y-4 max-w-4xl mx-auto mb-6">
             <h1
-                class="text-5xl md:text-7xl lg:text-8xl font-display font-bold tracking-normal leading-none uppercase italic">
-                <span class="text-gradient-reverse inline-block">THE MONSTER IS</span>
-                <span class="block text-gradient mt-2">AWAKENING</span>
+                class="text-4xl sm:text-5xl md:text-7xl lg:text-8xl font-display font-bold tracking-normal leading-none uppercase italic">
+                <span class="text-gradient-reverse inline-block">THE MONSTER <span
+                        class="hidden md:inline">IS</span></span>
+                <span class="block text-gradient mt-2"><span class="md:hidden">IS </span>AWAKENING</span>
             </h1>
             <div class="flex flex-col items-center">
                 <p
-                    class="text-foreground/90 text-lg md:text-xl font-light tracking-wide max-w-3xl mx-auto leading-relaxed flex flex-wrap items-center justify-center gap-y-8">
-                    Next-gen
-                    <span class="relative inline-flex flex-col items-center group mx-2">
-                        <span class="fade-label bottom-full mb-0.5 text-blue-400">
-                            <i data-lucide="layers" class="w-2 h-2"></i> DeFi
-                        </span>
-                        <span class="stable-badge meme">
-                            <i data-lucide="rocket" class="w-3 h-3 mr-1"></i> meme token
-                        </span>
-                        <span class="fade-label top-full mt-1 text-secondary">
-                            <i data-lucide="building-2" class="w-2 h-2"></i> RWA
+                    class="text-foreground/90 text-lg md:text-xl font-light tracking-wide max-w-3xl mx-auto leading-tight md:leading-relaxed flex flex-col md:flex-row md:flex-wrap items-center justify-center gap-y-10 md:gap-y-8">
+                    <span class="flex items-center">
+                        Next-gen
+                        <span class="badge-flipper">
+                            <span class="flipper-item">
+                                <span class="stable-badge meme">
+                                    <i data-lucide="rocket" class="w-3 h-3 mr-1"></i> meme
+                                </span>
+                            </span>
+                            <span class="flipper-item">
+                                <span class="stable-badge defi">
+                                    <i data-lucide="layers" class="w-3 h-3 mr-1"></i> DeFi
+                                </span>
+                            </span>
+                            <span class="flipper-item">
+                                <span class="stable-badge rwa">
+                                    <i data-lucide="building-2" class="w-3 h-3 mr-1"></i> RWA
+                                </span>
+                            </span>
                         </span>
                     </span>
-                    launchpad with
-                    <span class="stable-badge usdc">USDC</span>
-                    &
-                    <span class="stable-badge usdt">USDT</span>
-                    rewards.
+                    <span class="block md:inline">token launchpad with</span>
+                    <span class="flex items-center mt-2 md:mt-0">
+                        <span class="stable-badge usdc">USDC</span>
+                        &
+                        <span class="stable-badge usdt">USDT</span>
+                        rewards
+                    </span>
                 </p>
             </div>
         </div>
@@ -342,7 +433,7 @@
                 <span class="text-xs font-mono tracking-[0.1em] font-bold uppercase">BNB</span>
             </div>
 
-            <div class="w-px h-6 bg-border mx-1"></div>
+            <div class="hidden md:block w-px h-6 bg-border mx-1"></div>
 
             <div
                 class="chain-badge inline-flex items-center gap-2 px-4 py-2 rounded-full border border-green-400/50 bg-green-500/20 text-green-300 shadow-lg shadow-green-500/10 hover:border-green-400/80 hover:bg-green-500/30 hover:shadow-green-500/20">
@@ -352,7 +443,7 @@
         </div>
 
         <!-- Social Links -->
-        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 w-full max-w-4xl px-4">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 w-full max-w-4xl px-4">
             <a href="https://x.com/bomoscl" target="_blank"
                 class="flex flex-col items-center gap-4 p-5 social-card rounded-2xl group transition-all hover:border-primary/50 hover:bg-primary/5">
                 <div
