--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             </h1>
             <div class="flex flex-col items-center">
                 <p
-                    class="text-foreground/90 text-lg md:text-xl font-light tracking-wide max-w-3xl mx-auto leading-tight md:leading-relaxed flex flex-col md:flex-row md:flex-wrap items-center justify-center gap-y-10 md:gap-y-8">
+                    class="text-foreground/90 text-lg md:text-xl font-light tracking-wide max-w-3xl mx-auto leading-tight md:leading-relaxed flex flex-col md:flex-row md:flex-wrap items-center justify-center gap-y-3 md:gap-y-8">
                     <span class="flex items-center">
                         Next-gen
                         <span class="badge-flipper">
@@ -443,7 +443,7 @@
         </div>
 
         <!-- Social Links -->
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 w-full max-w-4xl px-4">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 w-full max-w-4xl px-4 mb-20 md:mb-12">
             <a href="https://x.com/bomoscl" target="_blank"
                 class="flex flex-col items-center gap-4 p-5 social-card rounded-2xl group transition-all hover:border-primary/50 hover:bg-primary/5">
                 <div
